<resources>
    <string name="app_name">xKorean</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_search">검색</string>
    <string name="menu_device">기종</string>
    <string name="menu_capability">특성</string>
    <string name="menu_category">장르</string>
    <string name="menu_korean">한국어 지원 범위</string>
    <string name="menu_sort">정렬</string>
    <string name="menu_refresh">새로고침</string>
    <string name="menu_setting">설정</string>
    <string name="menu_about">정보</string>
    <string name="search_hint">게임 이름을 입력하세요.</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
</resources>